--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="chat.css"/>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script type="text/javascript" src="/dpd.js"></script>
-  <script type="text/javascript" src="rest.js"></script>
+  <script type="text/javascript" src="socket.js"></script>
 </head>
 <body>
   <h1>Welcome to the CoOoOolest Chat!</h1>
